--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "bootstrap": "~3.3.2",
     "angular": "~1.3.13",
-    "angular-mocks": "~1.3.13"
+    "angular-mocks": "~1.3.13",
+    "bower-tinder-js": "*",
+    "tinder-js-byohmmho": "*"
   }
 }
