--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/ohmmho/angularApp",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.7.0"
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-processhtml": "^0.3.7"
   }
 }
