--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
+    "grunt-gh-pages": "^0.9.1",
     "grunt-processhtml": "^0.3.7"
   }
 }
